--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="container text-center">
         <img src="reciclagem.símbolo.jpg" alt="avatar da Ana" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Somos estudantes do CECM HVS da Terceira Série C</p>
-        <h1>Eu estudo na segunda série</h1>
+        <p class="lead">Somos estudantes do CECM HVS</p>
+        <h1>Terceira Série C</h1>
         <p>Desenvolvemos esse projeto a fim de informar à população sobre a importância da reciclagem para o meio ambiente e para a saúde da população.</p>
         <p>Palavras chaves</p>
         <div>
@@ -31,9 +31,9 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="juvenillejustice.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="licheiras.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Juvenille Justice- Dorama Netflix</h5>
+                        <h5 class="card-title">O que é reciclagem?</h5>
                         <p class="card-text">Juvenile Justice é um drama sul-coreano exibido internacionalmente pelo serviço destreaming Netflix. 
                             A série tem dez episódios que se passam no dia a dia de um tribunal em que está localizada
                              a vara da infância e da juventude, na qual ocorrem os julgamentos dos jovens infratores.
@@ -61,9 +61,9 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="vincenzo.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="Sustentabilidade-nas-Escolas-projeto-CSTR.jpg.webp" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Vincenzo- Dorama Netflix
+                        <h5 class="card-title">Projeto para desenvolvimento escolar
                         </h5>
                         <p class="card-text">Vincenzo conta a história de Vincenzo Cassano (Joong-ki Song), um advogado coreano que mora na Itália 
                             desde os oito anos, após ter sido adotado como consequência de uma traição de gangue. Ele agora trabalha para uma
@@ -151,7 +151,7 @@
             <i class="bi bi-github"></i>
             <a href="https://github.com/oliveiraxwm">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Ana Luiza Oliveira</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Ana Luiza, Dandara, Maryah, Murilo H., João R., Kaillany</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
