--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <img src="licheiras.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">O que é reciclagem?</h5>
-                        <p class="card-text">Juvenile Justice é um drama sul-coreano exibido internacionalmente pelo serviço destreaming Netflix. 
-                            A série tem dez episódios que se passam no dia a dia de um tribunal em que está localizada
-                             a vara da infância e da juventude, na qual ocorrem os julgamentos dos jovens infratores.
+                        <p class="card-text">A reciclagem é o processo de reaproveitamento de materiais descartados. Seu objetivo é reintroduzi-los na cadeia produtiva a fim de que ainda gerem valor e sejam reutilizados, 
+                            aumentando a preservação dos recursos naturais e melhorando a qualidade de vida das pessoas. É considerada uma das alternativas mais eficientes para tratar os resíduos sólidos, tanto do ponto 
+                            de vista ambiental quanto social, e está diretamente inserida no contexto da economia circular.
                         </p>
                         <button type="button" class="https://github.com/oliveiraxwm/Corinthians.git" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
