--- a/index.html
+++ b/index.html
@@ -82,15 +82,27 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Como é realizado esse processo:</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Juvenile Justice é um drama sul-coreano exibido internacionalmente pelo serviço destreaming Netflix. 
-                        A série tem dez episódios que se passam no dia a dia de um tribunal em que está localizada
-                         a vara da infância e da juventude, na qual ocorrem os julgamentos dos jovens infratores.
+                    <p>1. Coleta:
+                    A coleta seletiva é o primeiro passo, onde os materiais recicláveis são separados do lixo comum, 
+                    seja por meio de pontos de coleta específicos, caminhões de coleta seletiva ou catadores autônomos. 
+                       2. Triagem:
+                    Os materiais coletados passam por uma triagem, onde são separados por tipo (papel, plástico, vidro, 
+                    metal) e removidos materiais não recicláveis ou contaminados. 
+                       3. Processamento:
+                    Nesta etapa, os materiais são limpos, triturados, lavados e, em alguns casos, derretidos, dependendo 
+                    do material e do tipo de reciclagem. 
+                       4. Transformação:
+                    O material processado é transformado em matéria-prima, como flocos de plástico, aparas de papel ou 
+                    lingotes de metal, prontos para serem utilizados na fabricação de novos produtos. 
+                       5. Realocação:
+                    A matéria-prima reciclada é utilizada na produção de novos itens, completando o ciclo e reduzindo 
+                    a necessidade de extração de recursos naturais.
                     </p></p>
-                    <img src="juvenillejustice.jpeg" class="img-fluid w-100"
+                    <img src="IMG_1148-divulgacao-Loga.webp" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
