--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://www.youtube.com/watch?v=fp7BbXDd_7A">Ver projeto ao vivo</a>
+                    <a href="https://www.paranagua.pr.gov.br/downloads/Novo%20Programa%20Coleta%20Seletiva%20e%20Domiciliar.pdf">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
