--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto para desenvolvimento escolar
                         </h5>
-                        <p class="card-text">Vincenzo conta a história de Vincenzo Cassano (Joong-ki Song), um advogado coreano que mora na Itália 
-                            desde os oito anos, após ter sido adotado como consequência de uma traição de gangue. Ele agora trabalha para uma
-                            família de mafiosos italianos, que vive sempre em pé de guerra com outras facções.
+                        <p class="card-text">Atualmente, no colégio existem somente dois tipos de lixeira, reciclável e orgânica, porém, sabe-se qualidade
+                            que o correto seria haver pelo menos quatro lixeiras: Vidro, papel, orgânico e plástico; para o descarte correto dos materiais. 
+                            O colégio possui um funcionário responsável com o descarte correto, sabendo o horário que o caminhão da Coleta Seletiva (responsável
+                            pelos recicláveis) passará no período da manhã e da tarde, não havendo acúmulo de resíduos na frente do colégio.
                         </p>
                         <button type="button" class="https://github.com/oliveiraxwm/Corinthians.git" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
