--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div class="card">
                     <img src="curintia.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Corinthians Sport Club Paulista</h5>
-                        <p class="card-text">Este projeto é um site informativo sobre o time de futebol brasileiro Corinthians. 
-                            Mencionando jogadores e suas abilidades individuais após clicar em um ícone abaixo de suas fotos.
+                        <h5 class="card-title">O que é a Coleta Seletiva?
+                        <p class="card-text">A Coleta Seletiva é um processo de separação e recolhimento de resíduos separados em suas devidas lixeiras
+                            para que sejam reproveitados e não causarem danos à saúde da população.
                         </p>
                         <button type="button" class="https://github.com/oliveiraxwm/Corinthians.git" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
@@ -70,9 +70,6 @@
                             O colégio possui um funcionário responsável com o descarte correto, sabendo o horário que o caminhão da Coleta Seletiva (responsável
                             pelos recicláveis) passará no período da manhã e da tarde, não havendo acúmulo de resíduos na frente do colégio.
                         </p>
-                        <button type="button" class="https://github.com/oliveiraxwm/Corinthians.git" data-bs-toggle="modal" data-bs-target="#modal3">Veja
-                            o projeto</button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -117,7 +114,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Meu site esportivo</h5>
+                    <h5 class="modal-title">Quanto tempo cada material demora para se decompor?</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
