--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="curintia.jpeg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="coleta.jpeg"card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">O que é a Coleta Seletiva?
                         <p class="card-text">A Coleta Seletiva é um processo de separação e recolhimento de resíduos separados em suas devidas lixeiras
