--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma apresentação do time, mostrando seus respectivos jogadores,
-                        explicando suas posições e habilidades para que os torcedores da Fiel fiquem informados
-                        sobre todo os apectos do elenco. Como uma maneira de aproximer-se da torcida.
+                    <p>O tempo de decomposição de materiais na natureza varia muito. O lixo orgânico se decompõe em meses, enquanto materiais como plástico 
+                        e vidro podem levar séculos ou até mesmo milênios para se decompor. Lixo orgânico: O tempo de decomposição é relativamente rápido, 
+                        variando de 2 a 24 meses, dependendo das condições e do tipo de resíduo. Papel: Materiais como papel e papelão se decompõem em cerca 
+                        de 3 a 6 meses, dependendo da espessura e das condições. Plástico: O plástico é um dos materiais que mais demoram para se decompor, 
+                        podendo levar mais de 450 anos para desaparecer completamente. Vidro: O vidro é um dos materiais mais resistentes e leva um tempo 
+                        indeterminado para se decompor, podendo chegar a 1 milhão de anos. É importante lembrar que a decomposição de qualquer material pode 
+                        ser afetada por diversos fatores, como temperatura, umidade e a presença de microrganismos. A reciclagem e a compostagem são práticas 
+                        importantes para reduzir o impacto ambiental desses materiais no meio ambiente. 
                     </p>
                     <img src="ccsp.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto do site">
