--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         ser afetada por diversos fatores, como temperatura, umidade e a presença de microrganismos. A reciclagem e a compostagem são práticas 
                         importantes para reduzir o impacto ambiental desses materiais no meio ambiente. 
                     </p>
-                    <img src="ccsp.png" class="img-fluid w-100"
+                    <img src="rec.gif"img-fluid w-100"
                         alt="Imagem representativa do projeto do site">
                 </div>
                 <div class="modal-footer">
