--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                             O colégio possui um funcionário responsável com o descarte correto, sabendo o horário que o caminhão da Coleta Seletiva (responsável
                             pelos recicláveis) passará no período da manhã e da tarde, não havendo acúmulo de resíduos na frente do colégio.
                         </p>
+                        <button type="button" class="https://github.com/oliveiraxwm/Corinthians.git" data-bs-toggle="modal" data-bs-target="#modal2">Veja
+                            o projeto</button>
                 </div>
             </div>
         </div>
@@ -104,7 +106,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://www.paranagua.pr.gov.br/downloads/Novo%20Programa%20Coleta%20Seletiva%20e%20Domiciliar.pdf">Ver projeto ao vivo</a>
+                    <a href="https://www.paranagua.pr.gov.br/downloads/Novo%20Programa%20Coleta%20Seletiva%20e%20Domiciliar.pdf">Ver planilha da Prefeitura
                 </div>
             </div>
         </div>
@@ -129,12 +131,6 @@
                     </p>
                     <img src="rec.gif"img-fluid w-100"
                         alt="Imagem representativa do projeto do site">
-                </div>
-                <div class="modal-footer">
-                    <a href="https://corinthians-gwg8.vercel.app/">Ver projeto ao
-                        vivo</a>
-                    <a href="https://github.com/oliveiraxwm/Corinthians.git">Ver código do
-                        projeto</a>
                 </div>
             </div>
         </div>
