--- a/index.html
+++ b/index.html
@@ -141,17 +141,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Pesquisa e projeto</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Vincenzo conta a história de Vincenzo Cassano (Joong-ki Song), um advogado coreano que mora na Itália 
-                        desde os oito anos, após ter sido adotado como consequência de uma traição de gangue. Ele agora trabalha para uma
-                        família de mafiosos italianos, que vive sempre em pé de guerra com outras facções.</p>
-                    <img src="vincenzo.jpeg" alt="Projeto 3" class="img-fluid w-100">
-                </div>
-                <div class="modal-footer">
-                    <a href="https://www.youtube.com/watch?v=88n8SKhIAsE"">Ver projeto ao vivo</a>
+                    <p>Foi feito uma pesquisa em três turmas do colégio, 9°A, 1°A e 2°C, cada uma com 23, 24 e 29 alunos respectivamente.
+                        foi perguntado quantos alunos separam o lixo em casa, do total de entrevistados, apenas 5 alunos responderam que sim,
+                        33 sabem que precisa mas não separam, e 43 não reciclam. Portanto, concluí-se que a conscientização dos estudantes sobre 
+                        o reaproveitamento de materiais é baixo, e desenvolvemos uma palestra sobre o processo e os benefícios da reiclagem na vida 
+                        humana para melhor aproveitamento do planeta.
+                      </p>
+                   <img src="rec.gif"img-fluid w-100"
+                        alt="Imagem representativa do projeto do site">
+                    </div>
                 </div>
             </div>
         </div>
